# binary-search

./: .travis.yml  LICENSE  Makefile  README.md  binary-search.cabal  search-test.hs
Numeric/: Search.hs
Numeric/Search/: Bounded.hs  Integer.hs  Monadic.hs  Range.hs
Numeric/Search/Combinator/: Monadic.hs  Pure.hs
Numeric/Search/Internal/: Monadic.hs
test/: PureSpec.hs  doctests.hs
